[gd_scene load_steps=15 format=2]

[ext_resource path="res://Sprites/ParticleSpark.png" type="Texture" id=1]
[ext_resource path="res://Sparks.gd" type="Script" id=2]
[ext_resource path="res://Sprites/NachoComet.png" type="Texture" id=3]
[ext_resource path="res://Misc/ExplosionGradient.tres" type="Gradient" id=4]

[sub_resource type="CanvasItemMaterial" id=16]

[sub_resource type="GradientTexture" id=10]
gradient = ExtResource( 4 )
width = 20

[sub_resource type="Curve" id=18]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.646789, 0.920455 ), -0.412879, -0.412879, 0, 0, Vector2( 0.853211, 0.711364 ), -1.42443, -1.42443, 0, 0, Vector2( 1, 0.302273 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=14]
curve = SubResource( 18 )

[sub_resource type="ParticlesMaterial" id=19]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 75.39
initial_velocity_random = 0.72
angular_velocity = 18.15
angular_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -3.1
linear_accel_random = 0.52
angle_random = 1.0
scale = 0.5
scale_curve = SubResource( 14 )
color_ramp = SubResource( 10 )

[sub_resource type="CanvasItemMaterial" id=12]

[sub_resource type="GradientTexture" id=20]
gradient = ExtResource( 4 )
width = 20

[sub_resource type="ParticlesMaterial" id=21]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 34.96
initial_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -3.1
linear_accel_random = 0.52
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 20 )

[sub_resource type="CanvasItemMaterial" id=15]
blend_mode = 1

[sub_resource type="ParticlesMaterial" id=11]
lifetime_randomness = 1.0
flag_disable_z = true
spread = 50.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 80.0
initial_velocity_random = 0.72
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = -8.13
linear_accel_random = 0.52
scale = 2.0
scale_random = 1.0
color_ramp = SubResource( 10 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="NachoSplosion" type="Particles2D" parent="."]
material = SubResource( 16 )
scale = Vector2( 0.33, 0.33 )
emitting = false
amount = 33
lifetime = 7.49
one_shot = true
speed_scale = 9.62
explosiveness = 0.91
randomness = 1.0
process_material = SubResource( 19 )
texture = ExtResource( 3 )
__meta__ = {
"_editor_description_": ""
}

[node name="RoundSpark" type="Particles2D" parent="."]
material = SubResource( 12 )
emitting = false
amount = 33
lifetime = 7.49
one_shot = true
speed_scale = 9.62
explosiveness = 0.91
randomness = 1.0
process_material = SubResource( 21 )
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[node name="HitSpark" type="Particles2D" parent="."]
material = SubResource( 15 )
emitting = false
amount = 60
lifetime = 10.0
one_shot = true
speed_scale = 8.0
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 11 )
texture = ExtResource( 1 )
__meta__ = {
"_editor_description_": ""
}
